# tetrashop-projects

./: .env.local  .gitignore  .gitmodules  .htaccess  .vercelignore  404.html  BUSINESS_PLAN.md  CONNECTIONS_GRAPH.json  INSTANT_DASHBOARD.sh  INTEGRATION_MAP.json  LICENSE  MAIN_DASHBOARD.sh  Makefile  PORTAL_MAP.md  PROJECTS_STATUS.txt  README-FA.md  README-GATEWAY.md  README-GIT-MANAGEMENT.md  README.md  SETUP-FA.md  SIMPLE_GITHUB_PUSH.sh  _redirects  add-inline-styles.sh  admin-dashboard.html  admin-monitoring.html  aman-interface.html  app.js  apply-optimizations.sh  auto-git-update.sh  auto-vercel-deploy.sh  build.sh  check_health.sh  chess-ai.html  chess-interface.html  chess_ui.html  cloud-deployment-guide.md  create-premium-chess.sh  crypto-dashboard.html  dashboard-main.html  debug-index.js  (+103 more)
projects/chess-engine-cpp/: #  AlphaBeta.cpp  CMakeCache.txt  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  arm-toolchain.cmake
projects/chess-engine-cpp/Bitboards/: AttackTables.h  BitBoards.cpp  Bitboards.h  Magic.cpp  Magic.h  MagicsInit.cpp
projects/chess-engine-cpp/MoveGenerator/: MoveGenerator.hpp
projects/chess-engine-cpp/evaluation/: Evaluator.cpp  Evaluator.h
projects/chess-engine-cpp/gui/: CMakeLists.txt  GUI.h
projects/chess-engine-cpp/include/ChessEngine/: Position.h
projects/chess-engine-cpp/include/MoveGenerator/: MoveGenerator.cpp  MoveGenerator.h
projects/chess-engine-cpp/src/: main.cpp
projects/chess-engine-cpp/src/Core/: Board.cpp  (+6 more)
projects/chess-engine-cpp/tests/: CMakeLists.txt  CheckTest.cpp  FENParser.h  TranspositionTable.h
(+1252 files in other folders)
